kubernetes_deploy/staging-live1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laa-fala
  namespace: laa-fala-staging
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8000
  selector:
    app: laa-fala-app
