kubernetes_deploy/staging-live1/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laa-fala
  namespace: laa-fala-staging
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: laa-fala-laa-fala-staging-blue
    external-dns.alpha.kubernetes.io/aws-weight: "0"
spec:
  tls:
  - hosts:
    - laa-fala-staging.apps.live-1.cloud-platform.service.justice.gov.uk
  - hosts:
    - staging.find-legal-advice.justice.gov.uk
    secretName: fala-tls-certificate
  rules:
  - host: laa-fala-staging.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-fala
          servicePort: 80
  - host: staging.find-legal-advice.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-fala
          servicePort: 80
